# cado-search

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/cado/: __init__.py  cli.py  http.py  models.py  settings.py  storage.py
src/cado/api/: __init__.py  app.py
src/cado/api/static/: style.css
src/cado/api/templates/: _company_results.html  _lobbyist_results.html  base.html  company_detail.html  index.html  lobbyist_detail.html
src/cado/db/: __init__.py  ingest.py  schema.sql  session.py
src/cado/parsers/: __init__.py  company.py  lobbyist.py
src/cado/scrape/: companies.py  lobbyists.py
tests/: conftest.py  test_api.py  test_cli.py  test_db_ingest.py  test_http.py  test_http_integration.py  test_live_lobbyist.py  test_live_scrape.py  test_live_smoke.py  test_parser_company.py  test_parser_lobbyist.py  test_scrape_companies.py  test_storage.py
tests/fixtures/: company_details_25166.html  company_search_form.html  company_search_results_tim.html  lobbyist_search_all.html  lobbyist_search_all_last_page.html  lobbyist_search_all_page1.html  lobbyist_summary_IHL-867-1005.html
tests/fixtures/companies/: c_10000_dissolved_old.html  c_11656_remarks_with_quotes.html  c_2D_extraprov_old.html  c_50000_active_with_directors.html  c_69236_multirow_prevname.html  c_69963_coop_cancelled.html  c_73498_condo.html  c_85000_discontinued.html  c_99000_extraprov_active.html  n_1_multirow.html
