[project]
name = "cado"
version = "0.1.0"
description = "Scraper, DuckDB store, and HTMX search UI for Newfoundland's CADO registries"
readme = "README.md"
authors = [
    { name = "Jack Arthur Harrhy", email = "me@jackharrhy.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "lxml>=6",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "duckdb>=1.5",
    "fastapi>=0.136",
    "uvicorn[standard]>=0.47",
    "jinja2>=3.1",
    "python-multipart>=0.0.29",
    "typer>=0.25",
    "rich>=15",
    "tenacity>=9",
    "aiofiles>=25",
]

[project.scripts]
cado = "cado.cli:app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-httpx>=0.36",
    "ruff>=0.15",
    "mypy>=2.1",
    "types-beautifulsoup4>=4.12",
    "types-aiofiles>=25",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "RUF",              # ruff
    "SIM",              # simplify
    "C4",               # comprehensions
    "TID",              # tidy imports
    "PL",               # pylint
]
ignore = [
    "PLR0913",  # too many args
    "PLR2004",  # magic value
    "E501",     # line too long (handled by formatter)
    "TID252",   # relative imports within a package are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
